added loading component

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
+    <link rel="shortcut icon" href="/img/logo.ico">
+
     <title>News Blog</title>
   </head>
   <body>
